--- a/nextgisweb/webmap/nodepkg/package.json
+++ b/nextgisweb/webmap/nodepkg/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.0",
     "type": "module",
     "dependencies": {
-        "html-to-image": "^1.11.11"
+        "html-to-image": "^1.11.11",
+        "html-react-parser": "^4.0.0"
     }
 }
