--- a/nextgisweb/resource/nodepkg/package.json
+++ b/nextgisweb/resource/nodepkg/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "react-bootstrap": "^2.7.0",
         "react-select": "^5.7.0",
-        "@fontsource/montserrat": "^5.0.8"
+        "@fontsource/montserrat": "^5.0.8",
+        "@fontsource/forum": "^5.0.12"
     }
 }
