--- a/nextgisweb/webmap/nodepkg/package.json
+++ b/nextgisweb/webmap/nodepkg/package.json
@@ -4,6 +4,8 @@
     "type": "module",
     "dependencies": {
         "html-to-image": "^1.11.11",
-        "html-react-parser": "^4.0.0"
+        "html-react-parser": "^4.0.0",
+        "react-chartjs-2": "^5.2.0",
+        "chart.js": "^4.1.1"
     }
 }
