--- a/nextgisweb/webmap/nodepkg/package.json
+++ b/nextgisweb/webmap/nodepkg/package.json
@@ -6,6 +6,7 @@
         "html-to-image": "^1.11.11",
         "html-react-parser": "^5.0.4",
         "react-chartjs-2": "^5.2.0",
-        "chart.js": "^4.1.1"
+        "chart.js": "^4.1.1",
+        "uuid": "^9.0.1"
     }
 }
