--- a/nextgisweb/webmap/nodepkg/package.json
+++ b/nextgisweb/webmap/nodepkg/package.json
@@ -7,6 +7,7 @@
         "html-react-parser": "^5.0.4",
         "react-chartjs-2": "^5.2.0",
         "chart.js": "^4.1.1",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "axios": "^1.6.2"
     }
 }
