Update @tanstack/react-virtual version

--- a/nextgisweb/feature_layer/nodepkg/package.json
+++ b/nextgisweb/feature_layer/nodepkg/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "type": "module",
     "dependencies": {
-        "@tanstack/react-virtual": "^3.0.0-beta.22",
+        "@tanstack/react-virtual": "^3.0.2",
         "lodash-es": "^4.17.21",
         "react-draggable": "^4.4.5"
     }
