test tooltip from icon

--- a/nextgisweb/feature_layer/nodepkg/package.json
+++ b/nextgisweb/feature_layer/nodepkg/package.json
@@ -5,7 +5,6 @@
     "dependencies": {
         "@tanstack/react-virtual": "^3.0.2",
         "lodash-es": "^4.17.21",
-        "react-draggable": "^4.4.6",
-        "react-rnd": "^10.4.10"
+        "react-draggable": "^4.4.6"
     }
 }
