--- a/nextgisweb/resource/nodepkg/package.json
+++ b/nextgisweb/resource/nodepkg/package.json
@@ -1,5 +1,9 @@
 {
     "name": "@nextgisweb/resource",
     "version": "0.0.0",
-    "type": "module"
+    "type": "module",
+    "dependencies": {
+        "@fontsource/montserrat": "^5.0.8",
+        "@fontsource/forum": "^5.0.12"
+    }
 }
