--- a/nextgisweb/resource/nodepkg/package.json
+++ b/nextgisweb/resource/nodepkg/package.json
@@ -3,7 +3,12 @@
     "version": "0.0.0",
     "type": "module",
     "dependencies": {
+        "react-bootstrap": "^2.7.0",
+        "react-select": "^5.7.0",
         "@fontsource/montserrat": "^5.0.8",
-        "@fontsource/forum": "^5.0.12"
+        "@fontsource/forum": "^5.0.12",
+        "@dnd-kit/core": "^6.1.0",
+        "@dnd-kit/sortable": "^8.0.0",
+        "@dnd-kit/utilities": "^3.2.2"
     }
 }
