test ckeditor and style css

--- a/nextgisweb/jsrealm/nodepkg/ckeditor/package.json
+++ b/nextgisweb/jsrealm/nodepkg/ckeditor/package.json
@@ -30,8 +30,11 @@
         "@ckeditor/ckeditor5-font": "42.0.0",
         "@ckeditor/ckeditor5-code-block": "42.0.0",
         "@ckeditor/ckeditor5-ckeditor5-find-and-replace": "42.0.0",
-        "@ckeditor/ckeditor5-horizontal-line": "42.0.0","@ckeditor/ckeditor5-special-characters": "42.0.0","@ckeditor/ckeditor5-clipboard": "42.0.0",
+        "@ckeditor/ckeditor5-horizontal-line": "42.0.0",
+        "@ckeditor/ckeditor5-special-characters": "42.0.0",
+        "@ckeditor/ckeditor5-clipboard": "42.0.0",
         "@ckeditor/ckeditor5-remove-format": "42.0.0",
+        "@ckeditor/ckeditor5-alignment": "42.0.0",
         "postcss-loader": "^4.3.0",
         "raw-loader": "^4.0.2",
         "terser-webpack-plugin": "^4.2.3"
