--- a/nextgisweb/webmap/nodepkg/package.json
+++ b/nextgisweb/webmap/nodepkg/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "type": "module",
     "dependencies": {
-        "html-to-image": "1.11.11",
-        "react-rnd": "10.4.14",
+        "html-to-image": "^1.11.11",
+        "react-rnd": "^10.4.14",
         "html-react-parser": "^5.0.4",
         "react-chartjs-2": "^5.2.0",
         "chart.js": "^4.1.1"
