--- a/nextgisweb/webmap/nodepkg/package.json
+++ b/nextgisweb/webmap/nodepkg/package.json
@@ -7,8 +7,6 @@
         "react-rnd": "10.4.14",
         "html-react-parser": "^5.0.4",
         "react-chartjs-2": "^5.2.0",
-        "chart.js": "^4.1.1",
-        "fflate": "0.8.2",
-        "pako": "^2.1.0"
+        "chart.js": "^4.1.1"
     }
 }
