--- a/nextgisweb/resource/nodepkg/package.json
+++ b/nextgisweb/resource/nodepkg/package.json
@@ -9,7 +9,6 @@
         "@fontsource/forum": "^5.0.12",
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/sortable": "^8.0.0",
-        "@dnd-kit/utilities": "^3.2.2",
-        "react-photo-view": "^1.2.7"
+        "@dnd-kit/utilities": "^3.2.2"
     }
 }
