--- a/nextgisweb/resource/nodepkg/package.json
+++ b/nextgisweb/resource/nodepkg/package.json
@@ -9,6 +9,7 @@
         "@fontsource/forum": "^5.0.12",
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/sortable": "^8.0.0",
-        "@dnd-kit/utilities": "^3.2.2"
+        "@dnd-kit/utilities": "^3.2.2",
+        "rc-image": "^7.11.0"
     }
 }
