--- a/nextgisweb/resource/nodepkg/package.json
+++ b/nextgisweb/resource/nodepkg/package.json
@@ -10,6 +10,7 @@
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/sortable": "^8.0.0",
         "@dnd-kit/utilities": "^3.2.2",
-        "rc-image": "^7.11.0"
+        "rc-image": "^7.11.0",
+        "react-draggable": "^4.4.6"
     }
 }
