--- a/nextgisweb/jsrealm/nodepkg/ckeditor/package.json
+++ b/nextgisweb/jsrealm/nodepkg/ckeditor/package.json
@@ -3,45 +3,6 @@
     "version": "0.0.0",
     "type": "module",
     "dependencies": {
-        "@ckeditor/ckeditor5-adapter-ckfinder": "43.3.1",
-        "@ckeditor/ckeditor5-autoformat": "43.3.1",
-        "@ckeditor/ckeditor5-basic-styles": "43.3.1",
-        "@ckeditor/ckeditor5-style": "43.3.1",
-        "@ckeditor/ckeditor5-block-quote": "43.3.1",
-        "@ckeditor/ckeditor5-cloud-services": "43.3.1",
-        "@ckeditor/ckeditor5-ckfinder": "43.3.1",
-        "@ckeditor/ckeditor5-dev-translations": "40.2.3",
-        "@ckeditor/ckeditor5-dev-utils": "40.2.3",
-        "@ckeditor/ckeditor5-easy-image": "43.3.1",
-        "@ckeditor/ckeditor5-editor-classic": "43.3.1",
-        "@ckeditor/ckeditor5-essentials": "43.3.1",
-        "@ckeditor/ckeditor5-heading": "43.3.1",
-        "@ckeditor/ckeditor5-image": "43.3.1",
-        "@ckeditor/ckeditor5-indent": "43.3.1",
-        "@ckeditor/ckeditor5-link": "43.3.1",
-        "@ckeditor/ckeditor5-list": "43.3.1",
-        "@ckeditor/ckeditor5-paragraph": "43.3.1",
-        "@ckeditor/ckeditor5-paste-from-office": "43.3.1",
-        "@ckeditor/ckeditor5-source-editing": "43.3.1",
-        "@ckeditor/ckeditor5-table": "43.3.1",
-        "@ckeditor/ckeditor5-theme-lark": "43.3.1",
-        "@ckeditor/ckeditor5-typing": "43.3.1",
-        "@ckeditor/ckeditor5-upload": "43.3.1",
-        "@ckeditor/ckeditor5-highlight": "43.3.1",
-        "@ckeditor/ckeditor5-font": "43.3.1",
-        "@ckeditor/ckeditor5-find-and-replace": "43.3.1",
-        "@ckeditor/ckeditor5-horizontal-line": "43.3.1",
-        "@ckeditor/ckeditor5-special-characters": "43.3.1",
-        "@ckeditor/ckeditor5-clipboard": "43.3.1",
-        "@ckeditor/ckeditor5-remove-format": "43.3.1",
-        "@ckeditor/ckeditor5-alignment": "43.3.1",
-        "postcss-loader": "^4.3.0",
-        "raw-loader": "^4.0.2",
-        "terser-webpack-plugin": "^4.2.3"
-    },
-    "nextgisweb": {
-        "webpackConfigs": {
-            "ckeditor": "webpack.cjs"
-        }
+        "ckeditor5": "43.3.1"
     }
 }
