--- a/nextgisweb/webmap/nodepkg/package.json
+++ b/nextgisweb/webmap/nodepkg/package.json
@@ -9,6 +9,6 @@
         "react-chartjs-2": "^5.2.0",
         "chart.js": "^4.1.1",
         "pako": "^2.1.0",
-        "react-device-detect": "^2.2.3"
+        "ua-parser-js": "^2.0.4"
     }
 }
